Change assert applications in Get Applications to assert Application Summary Improve the code